Add content to index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,58 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="sidebar">
+        <div class="logo">
+            <img src="odin-logo-lined.png" alt="" class="logo-img">
+            <span class="logo-text">ODIN</span>
+        </div>
+
+        <div class="footer">
+            Photo by <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on 
+            <a href="https://unsplash.com/photos/25xggax4bSA">Unsplash</a>.
+        </div>
+    </div>
+    <div class="main">
+        <form action="http://httpbin.org/post" method="post">
+            <div class="form-paragraph">
+                <p>
+                    This is not a real online service! You know you need
+                    something like this in your life to help you realize
+                    your deepest dreams.
+                    Sign up <em>now</em> to get started.
+                </p>
+                <p>You <em>know</em> you want to.</p>
+            </div>
+
+            <div class="form-fields">
+                <p>Let's do this!</p>
+
+                <label for="first-name">First Name</label>
+                <input type="text" id="first-name" name="first-name">
+
+                <label for="last-name">Last Name</label>
+                <input type="text" id="last-name" name="last-name">
+
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email">
+
+                <label for="phone-number">Phone Number</label>
+                <input type="tel" id="phone-number">
+
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password">
+
+                <label for="confirm-password">Confirm Password</label>
+                <input type="password" id="confirm-password" name="confirm-password">
+            </div>
+
+            <div class="form-submit">
+                <button id="create-account" type="submit">Create Account</button>
+                <div class="login">
+                    Already have an account? <a href="#">Log in</a>
+                </div>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
