--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <p>
                     This is not a real online service! You know you need
                     something like this in your life to help you realize
-                    your deepest dreams.
+                    your deepest dreams. <br>
                     Sign up <em>now</em> to get started.
                 </p>
                 <p>You <em>know</em> you want to.</p>
