Add divs to form-fields to target with css

--- a/index.html
+++ b/index.html
@@ -35,23 +35,32 @@
             <div class="form-fields">
                 <p>Let's do this!</p>
 
-                <label for="first-name">First Name</label>
-                <input type="text" id="first-name" name="first-name">
-
-                <label for="last-name">Last Name</label>
-                <input type="text" id="last-name" name="last-name">
-
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email">
-
-                <label for="phone-number">Phone Number</label>
-                <input type="tel" id="phone-number">
-
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password">
-
-                <label for="confirm-password">Confirm Password</label>
-                <input type="password" id="confirm-password" name="confirm-password">
+              <div>  
+                  <div class="form-field">
+                      <label for="first-name">First Name</label>
+                      <input type="text" id="first-name" name="first-name">
+                  </div>
+                  <div class="form-field">
+                      <label for="last-name">Last Name</label>
+                      <input type="text" id="last-name" name="last-name">
+                  </div>
+                  <div class="form-field">
+                      <label for="email">Email</label>
+                      <input type="email" id="email" name="email">
+                  </div>
+                  <div class="form-field">
+                      <label for="phone-number">Phone Number</label>
+                      <input type="tel" id="phone-number">
+                  </div>
+                  <div class="form-field">
+                      <label for="password">Password</label>
+                      <input type="password" id="password" name="password">
+                  </div>
+                  <div class="form-field">
+                      <label for="confirm-password">Confirm Password</label>
+                      <input type="password" id="confirm-password" name="confirm-password">
+                  </div>
+              </div>
             </div>
 
             <div class="form-submit">
