--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 </head>
 <body>
     <div class="sidebar">
-        <div class="logo">
-            <img src="odin-logo-lined.png" alt="" class="logo-img">
-            <span class="logo-text">ODIN</span>
+        <div class="logo-wrapper">
+            <div class="logo">
+                <img src="odin-logo-lined.png" alt="" class="logo-img">
+                <span class="logo-text">ODIN</span>
+            </div>
         </div>
 
         <div class="footer">
