Add error correction to both password fields individually

--- a/index.html
+++ b/index.html
@@ -56,11 +56,12 @@
                   </div>
                   <div class="form-field">
                       <label for="password">Password</label>
-                      <input type="password" id="password" name="password">
+                      <input type="password" id="password" name="password" required>
+                      <div class="password-error">* Passwords do not match</div>
                   </div>
                   <div class="form-field">
                       <label for="confirm-password">Confirm Password</label>
-                      <input type="password" id="confirm-password" name="confirm-password">
+                      <input type="password" id="confirm-password" name="confirm-password" required>
                   </div>
               </div>
             </div>
