Add validation to the password field

--- a/index.html
+++ b/index.html
@@ -74,5 +74,27 @@
             </div>
         </form>
     </div>
+
+    <script>
+        const passwordInput = document.getElementById('password');
+        const confirmPasswordInput = document.getElementById('confirm-password');
+        const passwordError = document.querySelector('.password-error');
+
+        function validate() {
+            console.log("test");
+            if (passwordInput.value === confirmPasswordInput.value) {
+                passwordError.style.display = "none";
+                passwordInput.setCustomValidity("");
+                confirmPasswordInput.setCustomValidity("");
+            } else {
+                passwordError.style.display = "block";
+                passwordInput.setCustomValidity("Passwords do not match");
+                confirmPasswordInput.setCustomValidity("Passwords do not match");
+            }
+        }
+
+        passwordInput.addEventListener("input", validate);
+        confirmPasswordInput.addEventListener("input", validate);
+    </script>
 </body>
 </html>
