--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <div class="main">
-        <form action="http://httpbin.org/post" method="post">
+        <form action="https://httpbin.org/post" method="post">
             <div class="form-paragraph">
                 <p>
                     This is not a real online service! You know you need
